--- a/style/arcitex.css
+++ b/style/arcitex.css
@@ -6,4 +6,71 @@
                 font-weight: 400;
                 font-style: normal;
               }
-              
+              .display-flex{
+                display: flex;
+              }
+              /*dark 02 */
+              .text-gray{
+                color: #424242 ;
+              }
+              /*dark 03 */
+              .text-light-gray{
+               color: #727272;
+              }
+              .bg-light{
+              background-color: rgb(236, 232, 233);  
+              }
+              .btn-primary{
+                
+              background-color: #0be6ee ;  
+              color: white ;
+              padding: 20px 25px;
+              font-size: 1.25rem;
+              font-weight: 600;
+              border-radius: 8px;
+              border: none;
+              }
+
+.navbar{
+ justify-content: space-between; 
+ align-items: center;            
+}
+.brand{
+ font-weight: 700px;  
+ font-size: 3rem;             
+}
+
+
+.nav-item{
+ list-style: none; 
+ margin-right: 30px;            
+}
+.nav-link{
+text-decoration: none;
+font-weight: 500px;
+font-size: 18px;
+}
+.navbar, .banner{
+                max-width: 1440px;
+                margin: 0 auto;
+}
+ /*banner-related-style*/ 
+.banner-content{
+                max-width: 850px;
+                margin: 0 auto;
+                text-align: center;
+                margin-bottom: 50px;
+}
+.banner-title{
+                font-weight: 700px;
+                font-size: 4rem;
+}
+.banner-image{
+                width: 100%;
+}
+/* responsive media query */
+@media screen and  (max-width: 576) {
+.navbar, .nav-link{
+                flex-direction: column;
+}                
+}
